removed avatar and fix h2 spacing

--- a/styles.css
+++ b/styles.css
@@ -73,13 +73,15 @@ aside .avatar {
 }
 
 aside .about, aside .contacts, aside .skills {
-  margin-bottom: 20px;
+  margin-bottom: 100px;
   padding: 10px;
 }
+
 
 aside h2 {
   color: var(--dark);
   border-bottom: solid 1px var(--dark);
+  margin-bottom: 20px;
 }
 
 
@@ -130,7 +132,7 @@ main .project {
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 60%;
+  width: 70%;
   margin-inline: auto;
   margin-bottom: 200px;
 
@@ -141,6 +143,10 @@ main img {
   width: 100%;
   border-radius: 10px;
   box-shadow: 0 8px 14px -4px rgba(0,0,0,0.75);
+}
+
+main h2 {
+  margin-top: 20px;
 }
 
 main .links {
